[gd_scene load_steps=6 format=3 uid="uid://b8iwg2etjghi"]

[ext_resource type="Script" path="res://Autoloads/textbox.gd" id="1_0c11q"]
[ext_resource type="Theme" uid="uid://dkqrfy3kvl768" path="res://Menus/menu_theme.tres" id="1_a6le3"]
[ext_resource type="PackedScene" uid="uid://d0f2a1qyxli21" path="res://Menus/choice_layer.tscn" id="3_ql4ss"]
[ext_resource type="FontFile" uid="uid://5mdnkiqe5rns" path="res://Theme/NotoSansBatak-Regular.ttf" id="3_ysj2i"]
[ext_resource type="AudioStream" uid="uid://yknosivhdbu0" path="res://Assets/SFX/single_vowel.wav" id="5_3eo3g"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_0c11q")

[node name="Container" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_a6le3")

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
layout_mode = 2

[node name="Spacing" type="Control" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = -1

[node name="NameContainer" type="HBoxContainer" parent="Container/VBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NameSpace" type="MarginContainer" parent="Container/VBoxContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 32

[node name="ColorRect" type="ColorRect" parent="Container/VBoxContainer/VBoxContainer/NameContainer/NameSpace"]
modulate = Color(1, 1, 1, 0.431373)
layout_mode = 2
color = Color(1, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="Container/VBoxContainer/VBoxContainer/NameContainer/NameSpace"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="Name" type="Label" parent="Container/VBoxContainer/VBoxContainer/NameContainer/NameSpace/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ysj2i")

[node name="Spacing" type="Control" parent="Container/VBoxContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="Textbox" type="MarginContainer" parent="Container/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="Container/VBoxContainer/VBoxContainer/Textbox"]
modulate = Color(1, 1, 1, 0.431373)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Container/VBoxContainer/VBoxContainer/Textbox"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Words" type="Label" parent="Container/VBoxContainer/VBoxContainer/Textbox/MarginContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ysj2i")
autowrap_mode = 2

[node name="ChoiceLayer" parent="." instance=ExtResource("3_ql4ss")]

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="DramaticPauseTimer" type="Timer" parent="."]
one_shot = true

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_3eo3g")
bus = &"SFX"

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
[connection signal="timeout" from="DramaticPauseTimer" to="." method="_on_dramatic_pause_timer_timeout"]
